infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # The rewrite target took us to / even if /api/users was there
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: lab-infra.dev
    http:
      paths:
        - path: /api/auth
          pathType: Prefix
          backend:  
            service:
              name: auth-srv
              port:
                number: 3000

        #- path: /api/users
        #  pathType: Prefix
        #  backend:  
        #    service:
        #      name: auth-srv
        #      port:
        #        number: 3000
